src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Recent_Work__c</fullName>
        <formula>IF(ISPICKVAL(Market_Sector__c, &quot;Education&quot;),&quot;We have recently completed similar work in 88, Midwood High School, Fusion Academy, National Heritage Academies, and the Mary McDowell Friends School.&quot;, 
IF(ISPICKVAL(Market_Sector__c, &quot;Apartment/House&quot;),&quot;We have recently completed similar work on Wooster Street, West 71st Street, and West 16th Street.&quot;, 
IF(ISPICKVAL(Market_Sector__c, &quot;Government&quot;),&quot;We have recently completed similar work with Hudson River Trust, Pier 40, 353 West Street.&quot;, 
IF(ISPICKVAL(Market_Sector__c, &quot;Healthcare&quot;),&quot;We have recently completed similar work in Kayal Orthopaedics, Skinworks Dermatology, and Montefiore Medical Center.&quot;, 
IF(ISPICKVAL(Market_Sector__c, &quot;Hotel&quot;),&quot;We have recently completed similar work in the Hilton, the Gansevoort Hotel, and AKA Hotels.&quot;, 
IF(ISPICKVAL(Market_Sector__c, &quot;Manufacturing&quot;),&quot;We have recently completed similar work with Ample Hills Creamery, White Moustache Yogurt, and McCormick Zatarain’s.&quot;, 
IF(ISPICKVAL(Market_Sector__c, &quot;Office&quot;),&quot;We have recently completed similar work at 15 East 40th Street, Birchbox, the Mintz Group, and MakerBot.&quot;, 
IF(ISPICKVAL(Market_Sector__c, &quot;Residential Building&quot;),&quot;We have recently completed similar work in One Morton Square, Astoria Square, and 237 East 34th Street.&quot;, 
IF(ISPICKVAL(Market_Sector__c, &quot;Restaurant&quot;),&quot;We have recently completed similar work in Den Restaurant, Maritime Parc, Wolfgang Restaurant, and Sen Restaurant.&quot;, 
IF(ISPICKVAL(Market_Sector__c, &quot;Retail&quot;),&quot;We have recently completed similar work in Tommy Hilfiger, Kleinfeld Bridal, and Saks Fifth Avenue.&quot;,&quot;&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recent Work</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <formula>IF(OR(
 ISPICKVAL (LeadSource,&quot;Referral&quot;), 
 ISPICKVAL(LeadSource, &quot;Referral - Chelsey Bipat&quot;), 
 ISPICKVAL(LeadSource,&quot;Referral - Jahnavi Sajip&quot;)),1,0)</formula>
        <label>Referral</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repeat__c</fullName>
        <formula>IF(OR( 
ISPICKVAL (LeadSource,&quot;Chelsey Bipat&quot;), 
ISPICKVAL(LeadSource, &quot;Chris Delaney&quot;), 
ISPICKVAL(LeadSource,&quot;Jahnavi Sajip&quot;),
ISPICKVAL(LeadSource,&quot;Andrieu Reyes&quot;),
ISPICKVAL(LeadSource,&quot;George Langer&quot;),
ISPICKVAL(LeadSource,&quot;Ivan Taylor&quot;)),1,0)</formula>
        <label>Repeat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retainer1__c</fullName>
        <label>Retainer1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retainer_Percent__c</fullName>
        <defaultValue>0.15</defaultValue>
        <label>Retainer Percent</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retainer__c</fullName>
        <formula>Amount *15/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retainer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SD_Percent__c</fullName>
        <defaultValue>0.30</defaultValue>
        <label>SD Percent</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SUM__c</fullName>
        <label>SUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Head__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Head</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>New York Engineers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Sales Head)</relationshipLabel>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schematic_Design_SD_1__c</fullName>
        <label>Schematic Design (SD) 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Schematic_Design_SD__c</fullName>
        <formula>Amount *  SD_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schematic Design (SD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_City__c</fullName>
        <label>Site City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Country__c</fullName>
        <label>Site Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_State__c</fullName>
        <label>Site State or Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Street_Address__c</fullName>
        <label>Site Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Zip_or_Code__c</fullName>
        <label>Site Zip or Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprinkler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sprinkler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <description>max of 7 digit number, total project square footage of all floors being renovated / built</description>
        <label>Square Footage</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sylvester__c</fullName>
        <formula>IF(OR( 
ISPICKVAL (LeadSource,&quot;Sylvester-Michael Campaign&quot;), 
ISPICKVAL(LeadSource, &quot;Steven&quot;), 
ISPICKVAL(LeadSource,&quot;Sylvester-Chris&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sylvester</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TF_CA__c</fullName>
        <defaultValue>52</defaultValue>
        <label>TF - CA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TF_DD_CD__c</fullName>
        <defaultValue>4</defaultValue>
        <label>TF - DD/CD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TF_DOB_App__c</fullName>
        <defaultValue>8</defaultValue>
        <label>TF - DOB App</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TF_DOB_Filing__c</fullName>
        <defaultValue>6</defaultValue>
        <label>TF - DOB Filing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TF_Punch__c</fullName>
        <defaultValue>2</defaultValue>
        <label>TF - Punch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TF_SD__c</fullName>
        <defaultValue>4</defaultValue>
        <label>TF - SD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trades__c</fullName>
        <label>Trades</label>
        <picklist>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprinkler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Alarm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Administration</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Trigger_Days__c</fullName>
        <label>Trigger Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type2__c</fullName>
        <formula>IF(ISPICKVAL(Type,&quot;New Business&quot;),1,0)</formula>
        <label>Type2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web__c</fullName>
        <formula>IF(ISPICKVAL(LeadSource,&quot;Google Adwords&quot;), 1,0)</formula>
        <label>Web</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Won__c</fullName>
        <label>Won</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Won_construction_complete__c</fullName>
        <label>Won construction complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Won_terminated_mid_project__c</fullName>
        <label>Won terminated mid project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X0_30_Days_Old__c</fullName>
        <defaultValue>0</defaultValue>
        <label>0-30 Days Old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X120_Days_Old__c</fullName>
        <defaultValue>0</defaultValue>
        <label>&gt; 120 Days Old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X31_60_Days_Old__c</fullName>
        <defaultValue>0</defaultValue>
        <label>31-60 Days Old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X61_90_Days_Old__c</fullName>
        <defaultValue>0</defaultValue>
        <label>61-90 Days Old</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>new_date__c</fullName>
        <description>This field has New date to approach the Closed Won client (6 Months(180days) after ClosedDate)</description>
        <formula>ProjectCloseDate__c + 180</formula>
        <label>new_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pandadoc__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proposal_issued_to_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal issued to 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (proposal issued to 1)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>proposal_issued_to_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal issued to 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (proposal issued to 2)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>proposal_issued_to_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal issued to 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (proposal issued to 3)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Alex_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>proposal_issued_to_1__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Proposal_Issued__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>Sales_Head__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>equals</operation>
            <value>Alex Giordano</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <label>Alex Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_open_proposals</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Sales_Head__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>proposal_issued_to_1__c</columns>
        <columns>proposal_issued_to_2__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Proposal_Issued__c</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>Referer__c</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>Square_Footage__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>greaterOrEqual</operation>
            <value>11</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won</value>
        </filters>
        <label>All open proposals</label>
    </listViews>
    <listViews>
        <fullName>Billing_Test_View</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Schematic_Design_SD_1__c</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>DOB_Filing_Set_1__c</columns>
        <columns>CVV__c</columns>
        <columns>DOB_Approval__c</columns>
        <columns>Credit_Card__c</columns>
        <columns>Bid_Documents_Construction_Documents__c</columns>
        <columns>Construction_Admin__c</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won,Proposal/Price Quote,Negotiation/Review,On Hold</value>
        </filters>
        <filters>
            <field>Proposal_Issued__c</field>
            <operation>greaterThan</operation>
            <value>8/1/2018</value>
        </filters>
        <label>Billing Test View</label>
    </listViews>
    <listViews>
        <fullName>Chelsey_Opportunities_for_billing</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>proposal_issued_to_1__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Project_Manager_c__c</columns>
        <columns>Sales_Head__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Backlog__c</columns>
        <columns>X0_30_Days_Old__c</columns>
        <columns>X31_60_Days_Old__c</columns>
        <columns>X61_90_Days_Old__c</columns>
        <columns>X91_120_Days_Old__c</columns>
        <columns>X120_Days_Old__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>equals</operation>
            <value>Chelsey Bipat</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>Project_Manager_c__c</field>
            <operation>equals</operation>
            <value>Chelsey Bipat</value>
        </filters>
        <label>Chelsey Opportunities For Billing</label>
    </listViews>
    <listViews>
        <fullName>ChrisOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Sales_Head__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Proposal_Issued__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Referer__c</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Prospecting,Closed Won,Closed Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>DOB,Google Adwords,DOB - Violations</value>
        </filters>
        <label>Chris Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Existing_VS_New</fullName>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Existing_VS_New</label>
    </listViews>
    <listViews>
        <fullName>Flori_Opportunities_for_billing</fullName>
        <booleanFilter>(1 OR 3 ) AND 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>proposal_issued_to_1__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Project_Manager_c__c</columns>
        <columns>Sales_Head__c</columns>
        <columns>Proposal_Issued__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>equals</operation>
            <value>Flori Muresan</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>Project_Manager_c__c</field>
            <operation>equals</operation>
            <value>Flori Muresan</value>
        </filters>
        <label>Flori Opportunities All Won For Billing</label>
    </listViews>
    <listViews>
        <fullName>Flori_Opportunities_won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>proposal_issued_to_1__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Proposal_Issued__c</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>Sales_Head__c</columns>
        <columns>OPPORTUNITY.WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>equals</operation>
            <value>Flori Muresan</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Won - Construction Complete,Won - Terminated Mid Project</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <label>Flori Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Jahnavi_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>proposal_issued_to_1__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Proposal_Issued__c</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>Sales_Head__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>equals</operation>
            <value>Jahnavi Sajip</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won</value>
        </filters>
        <label>Jahnavi Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Jahnavi_Opportunities_for_billing</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>proposal_issued_to_1__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Project_Manager_c__c</columns>
        <columns>Sales_Head__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Backlog__c</columns>
        <columns>X0_30_Days_Old__c</columns>
        <columns>X31_60_Days_Old__c</columns>
        <columns>X61_90_Days_Old__c</columns>
        <columns>X91_120_Days_Old__c</columns>
        <columns>X120_Days_Old__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>equals</operation>
            <value>Jahnavi Sajip</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>Project_Manager_c__c</field>
            <operation>equals</operation>
            <value>Jahnavi Sajip</value>
        </filters>
        <label>Jahnavi Opportunities For Billing</label>
    </listViews>
    <listViews>
        <fullName>Kailash_Opportunities_won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>proposal_issued_to_1__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Proposal_Issued__c</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>Sales_Head__c</columns>
        <columns>OPPORTUNITY.WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>equals</operation>
            <value>Kailash Sridhar</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <label>Kailash Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Michael_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>proposal_issued_to_1__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Proposal_Issued__c</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>Sales_Head__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Head__c</field>
            <operation>equals</operation>
            <value>Michael Tobias</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <label>Michael Opportunities</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL(StageName, &quot;Proposal/Price Quote&quot;), ISBLANK(( Amount )))</errorConditionFormula>
        <errorMessage>Please Enter the amount ($)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Out_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
     ISPICKVAL(StageName , &quot;Closed Lost&quot;),
     ISBLANK( CloseDate )
)</errorConditionFormula>
        <errorMessage>Please Add a Closed Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Engineers</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL(StageName, &quot;Proposal/Price Quote&quot;), ISBLANK(TEXT( ENGINEERS__c )))</errorConditionFormula>
        <errorMessage>Please Enter which domain the work is to be done</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Market_Sector_Required</fullName>
        <active>true</active>
        <description>Market Sector required when Stage is moved to &quot;Proposal/Price Quote&quot;</description>
        <errorConditionFormula>AND (ISPICKVAL(StageName, &quot;Proposal/Price Quote&quot;), ISBLANK(TEXT(Market_Sector__c)))</errorConditionFormula>
        <errorMessage>Fill out Market Sector</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Business_Lead_Source</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
ISPICKVAL(StageName, &quot;Proposal/Price Quote&quot;),
ISPICKVAL(StageName, &quot;On Hold&quot;))
&amp;&amp;
ISPICKVAL(Type, &quot;New Business&quot;)
&amp;&amp;
OR(
ISPICKVAL(LeadSource,&quot;Chelsey Bipat&quot;),
ISPICKVAL(LeadSource,&quot;Jahnavi Sajip&quot;),
ISPICKVAL(LeadSource,&quot;Flori Murseon&quot;))</errorConditionFormula>
        <errorMessage>This Lead Source is not valid.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Amount_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Amount  &lt; 0</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>Amount can not be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Name_Rule</fullName>
        <active>true</active>
        <description>Name field cannot contain &apos;:&apos;</description>
        <errorConditionFormula>CONTAINS(Name, &apos;:&apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name field cannot contain &apos;:&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PM_for_Project</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL(StageName, &quot;Proposal/Price Quote&quot;), ISBLANK(Project_Manager_c__c))</errorConditionFormula>
        <errorMessage>Please Add who will be the Project Manager For this Job</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Proposal_Issued</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL( StageName ,&quot;Proposal/Price Quote&quot;),
ISPICKVAL( StageName ,&quot;Closed Won&quot;),
ISPICKVAL( StageName ,&quot;Closed Lost&quot;) )&amp;&amp;  ISBLANK( Proposal_Issued__c )</errorConditionFormula>
        <errorMessage>Please fill the Proposal Issued Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Proposal_Onhold_contact</fullName>
        <active>true</active>
        <description>If Stage is &quot;Proposal/Price Quote&quot; or &quot;On Hold&quot; And Type is &quot;New Business&quot;
then Lead source must not be &quot;Chelsey Bipat&quot;,&quot;Jahnavi Sajip&quot; or &quot;Flori Muresan&quot;</description>
        <errorConditionFormula>OR(
ISPICKVAL(StageName, &quot;Proposal/Price Quote&quot;),
ISPICKVAL(StageName, &quot;On Hold&quot;))
&amp;&amp;
ISPICKVAL(Type, &quot;New Business&quot;)
&amp;&amp;
OR(
ISPICKVAL(LeadSource,&quot;Chelsey Bipat&quot;),
ISPICKVAL(LeadSource,&quot;Jahnavi Sajip&quot;),
ISPICKVAL(LeadSource,&quot;Flori Muresan&quot;))</errorConditionFormula>
        <errorMessage>If Stage is &quot;Proposal/Price Quote&quot; or &quot;On Hold&quot; And Type is &quot;New Business&quot; 
then Lead source must not be &quot;Chelsey Bipat&quot;,&quot;Jahnavi Sajip&quot; or &quot;Flori Muresan&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_For_Loss_Required</fullName>
        <active>true</active>
        <description>Reason For Loss Required when Stage is moved to &quot;Closed Lost&quot;</description>
        <errorConditionFormula>AND (ISPICKVAL(StageName, &quot;Closed Lost&quot;), ISBLANK(TEXT(Reason_For_Loss__c)))</errorConditionFormula>
        <errorMessage>Fill out Reason For Loss</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sqaure_Footage</fullName>
        <active>true</active>
        <description>Square footage required when stage is moved to Proposal/Price Quote</description>
        <errorConditionFormula>AND (ISPICKVAL(StageName, &quot;proposal/Price Quote&quot;), ISBLANK(TEXT(Square_Footage__c)))</errorConditionFormula>
        <errorMessage>Fill out Square Footage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>proposal_issued_to_1</fullName>
        <active>true</active>
        <description>Proposal issued to contact required when stage is moved to &quot;Proposal/Price Quote&quot;</description>
        <errorConditionFormula>AND (ISPICKVAL(StageName, &quot;Proposal/Price Quote&quot;), ISBLANK(proposal_issued_to_1__c))</errorConditionFormula>
        <errorMessage>Fill out proposal issued to 1</errorMessage>
    </validationRules>
</CustomObject>